<resources>
    <string name="app_name">Music Player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Enter_Name_hint">Enter Name</string>
    <string name="Enter_Password_hint">Enter Password</string>
    <string name="Enter_Phone_hint">Enter Phone</string>
    <string name="Enter_Email_hint">Enter Email</string>
    <string name="Enter_Gender_hint">Enter Gender</string>
    <string name="Sign_Up_text_view">Sign Up</string>
    <string name="Forgot_Pass_text_view">Forgot Password?</string>
    <string name="A_new_user_text_view">A new user instead?</string>
    <string name="Sign_In_button">Sign In</string>


    <string name="firebase_status_fmt">Google user: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
</resources>
